--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
   <body>
     <h1>Página do Edson</h1>
     <p>Turma: 1E      Número: 10</p>
+
+    <div class="caixa1">
+      Caixa 1
+    </div>
+
   </body>
 </html>
