--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
+
   <head>
     <meta charset="utf-8">
     <title>Aluno Edson</title>
     <link rel="stylesheet" href="estilo.css">
   </head>
+
   <body>
+
+    <div class="menuPrincipal">
+      <nav>
+        <ul>
+          <li><a href="index.html"></a>Home</li>
+          <li><a href="pagina01.html"></a>Página 01</li>
+          <li><a href="pagina02.html"></a>Página 02</li>
+        </ul>
+      </nav>
+    </div>
+
     <h1>Página do Edson</h1>
     <p>Turma: 1E      Número: 10</p>
 
@@ -14,4 +27,5 @@
     </div>
 
   </body>
+  
 </html>
