--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="menuPrincipal">
       <nav>
         <ul>
-          <li><a href="index.html"></a>Home</li>
-          <li><a href="pagina01.html"></a>Página 01</li>
-          <li><a href="pagina02.html"></a>Página 02</li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="pagina01.html">Página 01</a></li>
+          <li><a href="pagina02.html">Página 02</a></li>
         </ul>
       </nav>
     </div>
