--- a/pagina01.html
+++ b/pagina01.html
@@ -17,5 +17,10 @@
             </ul>
           </nav>
     </div>
+
+    <div class="boxImage">
+      <img id="mar" src="imagem/mar.jpg" alt="">
+    </div>
+
 </body>
 </html>
