--- a/index.html
+++ b/index.html
@@ -19,11 +19,16 @@
       </nav>
     </div>
 
-    <h1>Página do Edson</h1>
-    <p>Turma: 1E      Número: 10</p>
 
-    <div class="caixa1">
-      Caixa 1
+    <div class="conteudoHome">
+      <h1>O MAR DA NATUREZA</h1>
+      
+      <h2>As Belezas do Mar</h2>
+      <img id="imagemHome" src="home.jpg" alt="">
+    </div>
+
+    <div class="rodape">
+      Aluno: Edson Kichie Mario Noguchi - Nº10 - Primeiro E
     </div>
 
   </body>
