--- a/pagina01.html
+++ b/pagina01.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="boxImage">
-      <img id="mar" src="imagem/mar.jpg" alt="">
+      <img id="mar" src="mar.jpg" alt="">
     </div>
 
 </body>
