--- a/pagina01.html
+++ b/pagina01.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aluno Edson</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 
@@ -14,18 +14,17 @@
     <div class="menuPrincipal">
         <nav>
             <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="pagina01.html">Página 01</a></li>
-              <li><a href="pagina02.html">Página 02</a></li>
+              <li><a href="index.html">Início</a></li>
+              <li><a href="pagina01.html">Belas Águas</a></li>
+              <li><a href="pagina02.html">Lista dos Mares</a></li>
             </ul>
           </nav>
     </div>
 
     <div class="conteudo01">
       <h1>As Belezas das Águas</h1>
-          <div class="boxImage">
-            <img id="mar" src="mar.jpg" alt="">
-          </div>
+
+      <img id="mar" src="mar.jpg" alt="">
           
       <p>O mar exibe suas belezas exuberantes, como suas praias, corais, algas, arrecifes, além de 
       seus diversos animais.</p>
@@ -34,5 +33,9 @@
       Corais: organismos formados por colônias de cnidários.</p>
     </div>
 
+
+    <div class="rodape">
+      Aluno: Edson Kichie Mario Noguchi - Nº10 - Primeiro E
+    </div>
 </body>
 </html>
