--- a/pagina02.html
+++ b/pagina02.html
@@ -4,18 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aluno Edson</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <div class="menuPrincipal">
         <nav>
             <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="pagina01.html">Página 01</a></li>
-              <li><a href="pagina02.html">Página 02</a></li>
+              <li><a href="index.html">Início</a></li>
+              <li><a href="pagina01.html">Belas Águas</a></li>
+              <li><a href="pagina02.html">Lista dos Mares</a></li>
             </ul>
           </nav>
     </div> 
+
+    <div class="conteudo02">
+      <h1>Mares Espetaculares</h1>
+
+      <p>1 Los Roques, na Venezuela (Mar do Caribe) </p>
+        <img id="lista" src="caribe.jpg" alt="">
+          
+      <p>2 Whiteraven Beach, na Austrália (Mar de Coral)</p>
+        <img id="lista" src="coral.jpg" alt="">
+
+     <p>3 Ilha Yasawa, em Fiji (Mar Koro)</p>
+       <img id="lista" src="koro.jpg" alt="">
+       
+    </div>
+
+
+    <div class="rodape2">
+      Aluno: Edson Kichie Mario Noguchi - Nº10 - Primeiro E
+    </div>
 </body>
 </html>
